<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interest Destroyer</string>
    <string name="welcome">Welcome to Interest Destroyer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Gathering Information</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_amortization">Amortization</string>
    <string name="title_activity_results_chart">Charted Results</string>
    <string name="principal">Principal:</string>
    <string name="interest">Interest Rate:</string>
    <string name="extra_payment">Extra Payment:</string>
    <string name="num_months"># of Months:</string>
    <string name="get_results">Get Results</string>
    <string name="title_activity_extra_payments_chart">Extra Payments Chart</string>
    <string name="title_activity_bar_chart">Bar Chart</string>
    <string name="principal_hint">100000</string>
    <string name="interest_hint">5.25</string>
    <string name="months_hint">360</string>
    <string name="extra_payment_hint">100</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="content_desc">Content Description</string>
    <string name="interest_saved">Interest Saved:</string>
    <string name="years_saved">Years Saved:</string>
    <string name="results_ready">Your results are ready!</string>
    <string name="what_next">What would you like to do now?</string>
    <string name="amortization">Amortization:</string>
    <string name="see_graphical_results">See graphical results</string>
    <string name="see_amortization">See amortization schedule</string>
    <string name="email_amortization">E-MAIL Amortization Schedule</string>
    <string name="see_buy_down_effect">See graphical effect of buy down points.</string>
    <string name="share_on_facebook">Share on Facebook.</string>
    <string name="email_results">EMAIL Results</string>
    <string name="principal_vs_extra">Principal amounts: minimum vs. extra payment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
