<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tutorazadi.interestdestroyerandroid.OptionsActivity" 
    android:background="@drawable/green_gradient"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/resultsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/results_ready"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/whatNextTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="@string/what_next"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/amortizeBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center"
        android:text="@string/see_amortization"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/emailAmortizeBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email_amortization" 
        android:textColor="@color/white" />

    <Button
        android:id="@+id/graphicalResultsBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/see_graphical_results" 
        android:textColor="@color/white" />

    <Button
        android:id="@+id/graphicalBuyDownBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/see_buy_down_effect" 
        android:textColor="@color/white" />

    <Button
        android:id="@+id/shareOnFacebookBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/share_on_facebook" 
        android:textColor="@color/white" />
</LinearLayout>
