<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_background"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/yearsSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/interestSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"  
            android:layout_marginTop="10dp"
            android:text="@string/principal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/principalTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
	        android:textColorHint="@color/white"
	        android:textColor="@color/white"
            android:hint="@string/principal_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/interest"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/interestTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/white"
	        android:textColor="@color/white"
            android:hint="@string/interest_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/num_months"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/monthsTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
	        android:textColorHint="@color/white"
	        android:textColor="@color/white"
            android:hint="@string/months_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/extra_payment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/extraPaymentTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
	        android:textColor="@color/white"
	        android:textColorHint="@color/white"
            android:hint="@string/extra_payment_hint" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    
	    <ImageView
        	android:id="@+id/imageView2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_centerHorizontal="true"
        	android:contentDescription="@string/content_desc"
        	android:src="@drawable/dollarsign" />
	    
	</RelativeLayout>

    
    <Button
        android:id="@+id/getInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
    	android:layout_marginTop="10dp"
        android:text="@string/get_results" />

</LinearLayout>