<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/amortizationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/amortization"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/principalVsExtraTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/principal_vs_extra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/amortizationList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.26" >
    </ListView>

    <Button
        android:id="@+id/emailResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_results"
        android:textColor="@color/white" />

</LinearLayout>